# infinite-craft-solver

./: .gitignore  README.md
recipe-generation/: .env.example  README.md  pyproject.toml
recipe-generation/app/: db.py  db_checker.py  main.py  reset.py
web-app/: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js
web-app/src/: app.css  app.html
web-app/src/lib/: mongodb-client.ts
web-app/src/lib/components/mine/: button.svelte  graph.svelte  link.svelte
web-app/src/lib/components/ui/accordion/: accordion-content.svelte  accordion-item.svelte  accordion-trigger.svelte
web-app/src/lib/components/ui/button/: index.ts
web-app/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  status-bar.svelte
web-app/src/routes/[element]/: +page.server.ts  +page.svelte
web-app/src/routes/about/: +page.svelte
web-app/src/routes/api/elements/: +server.ts
web-app/src/routes/api/elements/[element]/recipe/: +server.ts
web-app/src/routes/api/elements/random/: +server.ts
web-app/src/routes/api/status/: +server.ts
web-app/src/routes/info/: +page.svelte
web-app/src/routes/path/[element]/: +page.server.ts  +page.svelte
web-app/src/routes/random/: +page.server.ts
web-app/src/routes/recipe/[element]/: +page.svelte
web-app/src/routes/test/: +page.svelte  bar-chart.svelte  force.svelte
